[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "BXutils"
version = "0.0.1"
authors = [
  { name="Gianluca Oberreit", email="author@example.com" },
  { name="Carlos Lopez", email="author@example.com" },
]
description = "Utils for the BX bots"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPLv3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/BX-bot-ecosystem/BX-bot-utils.git"
"Bug Tracker" = "https://github.com/BX-bot-ecosystem/BX-bot-utils/issues"
